// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test LayerContextMenu should render correctly in mobile 1`] = `
<div>
  <div
    class="item-group"
  >
    <div
      class="adm-divider adm-divider-vertical adm-divider-center divider"
    />
    <div
      class="object-panel-item"
      id="deletelayer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Delete Layer
      </div>
    </div>
    <div
      class="object-panel-item"
      id="merge_down_layer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Merge Down
      </div>
    </div>
    <div
      class="object-panel-item"
      id="locklayer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Lock Layer
      </div>
    </div>
    <div
      class="object-panel-item"
      id="dupelayer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Duplicate Layer
      </div>
    </div>
    <div
      class="object-panel-item"
      id="renameLayer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Rename Layer
      </div>
    </div>
  </div>
</div>
`;

exports[`test LayerContextMenu should render correctly when multiselecting 1`] = `
<div>
  <nav
    class="react-contextmenu"
    role="menu"
    style="opacity: 0; pointer-events: none; position: fixed;"
    tabindex="-1"
  >
    <div
      aria-disabled="true"
      class="react-contextmenu-item react-contextmenu-item--disabled"
      id="renameLayer"
      role="menuitem"
      tabindex="-1"
    >
      Rename Layer
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item"
      id="dupelayer"
      role="menuitem"
      tabindex="-1"
    >
      Duplicate Layer
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item"
      id="locklayer"
      role="menuitem"
      tabindex="-1"
    >
      Lock Layer
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item"
      id="deletelayer"
      role="menuitem"
      tabindex="-1"
    >
      Delete Layer
    </div>
    <div
      aria-disabled="true"
      class="react-contextmenu-item react-contextmenu-item--disabled"
      id="merge_down_layer"
      role="menuitem"
      tabindex="-1"
    >
      Merge Down
    </div>
    <div
      aria-disabled="true"
      class="react-contextmenu-item react-contextmenu-item--disabled"
      id="merge_all_layer"
      role="menuitem"
      tabindex="-1"
    >
      Merge All
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item"
      id="merge_selected_layer"
      role="menuitem"
      tabindex="-1"
    >
      Merge Selected Layers
    </div>
  </nav>
</div>
`;

exports[`test LayerContextMenu should render correctly when selecting last 1`] = `
<div>
  <nav
    class="react-contextmenu"
    role="menu"
    style="opacity: 0; pointer-events: none; position: fixed;"
    tabindex="-1"
  >
    <div
      aria-disabled="false"
      class="react-contextmenu-item"
      id="renameLayer"
      role="menuitem"
      tabindex="-1"
    >
      Rename Layer
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item"
      id="dupelayer"
      role="menuitem"
      tabindex="-1"
    >
      Duplicate Layer
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item"
      id="locklayer"
      role="menuitem"
      tabindex="-1"
    >
      Lock Layer
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item"
      id="deletelayer"
      role="menuitem"
      tabindex="-1"
    >
      Delete Layer
    </div>
    <div
      aria-disabled="true"
      class="react-contextmenu-item react-contextmenu-item--disabled"
      id="merge_down_layer"
      role="menuitem"
      tabindex="-1"
    >
      Merge Down
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item"
      id="merge_all_layer"
      role="menuitem"
      tabindex="-1"
    >
      Merge All
    </div>
    <div
      aria-disabled="true"
      class="react-contextmenu-item react-contextmenu-item--disabled"
      id="merge_selected_layer"
      role="menuitem"
      tabindex="-1"
    >
      Merge Selected Layers
    </div>
  </nav>
</div>
`;

exports[`test LayerContextMenu should render correctly when selecting printing layer 1`] = `
<div>
  <nav
    class="react-contextmenu"
    role="menu"
    style="opacity: 0; pointer-events: none; position: fixed;"
    tabindex="-1"
  >
    <div
      aria-disabled="false"
      class="react-contextmenu-item"
      id="renameLayer"
      role="menuitem"
      tabindex="-1"
    >
      Rename Layer
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item"
      id="dupelayer"
      role="menuitem"
      tabindex="-1"
    >
      Duplicate Layer
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item"
      id="locklayer"
      role="menuitem"
      tabindex="-1"
    >
      Lock Layer
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item"
      id="deletelayer"
      role="menuitem"
      tabindex="-1"
    >
      Delete Layer
    </div>
    <div
      aria-disabled="true"
      class="react-contextmenu-item react-contextmenu-item--disabled"
      id="merge_down_layer"
      role="menuitem"
      tabindex="-1"
    >
      Merge Down
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item"
      id="merge_all_layer"
      role="menuitem"
      tabindex="-1"
    >
      Merge All
    </div>
    <div
      aria-disabled="true"
      class="react-contextmenu-item react-contextmenu-item--disabled"
      id="merge_selected_layer"
      role="menuitem"
      tabindex="-1"
    >
      Merge Selected Layers
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item"
      id="toggle_fullcolor_layer"
      role="menuitem"
      tabindex="-1"
    >
      Switch to full color layer
    </div>
    <div
      aria-disabled="true"
      class="react-contextmenu-item react-contextmenu-item--disabled"
      id="split_color"
      role="menuitem"
      tabindex="-1"
    >
      Expand Layer
    </div>
  </nav>
</div>
`;

exports[`test LayerContextMenu unlock layers should work 1`] = `
<div>
  <div
    class="item-group"
  >
    <div
      class="adm-divider adm-divider-vertical adm-divider-center divider"
    />
    <div
      class="object-panel-item"
      id="deletelayer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Delete Layer
      </div>
    </div>
    <div
      class="object-panel-item"
      id="merge_down_layer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Merge Down
      </div>
    </div>
    <div
      class="object-panel-item"
      id="locklayer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Unlock
      </div>
    </div>
    <div
      class="object-panel-item"
      id="dupelayer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Duplicate Layer
      </div>
    </div>
    <div
      class="object-panel-item"
      id="renameLayer"
    >
      <div
        class="main"
      >
        <svgr-url />
      </div>
      <div
        class="label"
      >
        Rename Layer
      </div>
    </div>
  </div>
</div>
`;
